fixed sizing of message post box, works on mobile now. border for messages

--- a/test/Content/Site.css
+++ b/test/Content/Site.css
@@ -768,7 +768,7 @@ ol.messages
 {
     padding: 0;
     margin: 0;   
-    border: 2px solid black;
+    border: 1px solid black;
 }
 
 ol.messages li
